--- a/engine/flink/lambpa-flink/pom.xml
+++ b/engine/flink/lambpa-flink/pom.xml
@@ -30,11 +30,11 @@ under the License.
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<flink.version>1.8.0</flink.version>
 		<java.version>1.8</java.version>
-		<pulsar.version>2.3.1</pulsar.version>
-		<druid.version>0.8.2</druid.version>>
 		<scala.binary.version>2.11</scala.binary.version>
+		<flink.version>1.8.0</flink.version>
+		<pulsar.version>2.3.1</pulsar.version>
+		<lombook.version>1.16.20</lombook.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
@@ -69,19 +69,29 @@ under the License.
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
-
-		<!-- Example:
-
+		<!-- Connector dependencies here. They must be in the default scope (compile). -->
 		<dependency>
-			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-connector-kafka-0.10_${scala.binary.version}</artifactId>
-			<version>${flink.version}</version>
+			<groupId>org.apache.pulsar</groupId>
+			<artifactId>pulsar-flink</artifactId>
+			<version>${pulsar.version}</version>
+			<scope>compile</scope>
 		</dependency>
-		-->
+		<dependency>
+			<groupId>org.apache.bahir</groupId>
+			<artifactId>flink-connector-influxdb_${scala.binary.version}</artifactId>
+			<version>1.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
-		<!-- Add logging framework, to produce console output when running in the IDE. -->
-		<!-- These dependencies are excluded from the application JAR by default. -->
+		<!-- Other dependencies to package on JAR -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombook.version}</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Add logging framework, to local test. -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -94,23 +104,10 @@ under the License.
 			<version>1.2.17</version>
 			<scope>runtime</scope>
 		</dependency>
-        <dependency>
-            <groupId>org.apache.pulsar</groupId>
-            <artifactId>pulsar-flink</artifactId>
-            <version>${pulsar.version}</version>
-        </dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.16.20</version>
-		</dependency>
-		<dependency>
-			<groupId>io.druid</groupId>
-			<artifactId>tranquility-flink_${scala.binary.version}</artifactId>
-			<version>${druid.version}</version>
-		</dependency>
-	</dependencies>
 
+
+
+	</dependencies>
 	<build>
 		<plugins>
 
@@ -161,7 +158,7 @@ under the License.
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.kschool.tfm.engine.flink.StreamingJob</mainClass>
+									<mainClass>com.kschool.tfm.engine.flink.PowerConsumption</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
