--- a/engine/flink/lambpara-flink/pom.xml
+++ b/engine/flink/lambpara-flink/pom.xml
@@ -21,12 +21,12 @@ under the License.
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kschool.tfm.engine.flink</groupId>
-	<artifactId>lambpa-flink</artifactId>
+	<artifactId>lambpara-flink</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Lambpa. Final Project Master(Kschool)</name>
-	<url>http://www.myorganization.org</url>
+	<name>Lambpara. Final Project Master(Kschool)</name>
+	<url>https://github.com/jmf92</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -123,7 +123,6 @@ under the License.
 			</plugin>
 
 			<!-- We use the maven-shade plugin to create a fat jar that contains all necessary dependencies. -->
-			<!-- Change the value of <mainClass>...</mainClass> if your program entry point changes. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -146,8 +145,6 @@ under the License.
 							</artifactSet>
 							<filters>
 								<filter>
-									<!-- Do not copy the signatures in the META-INF folder.
-									Otherwise, this might cause SecurityExceptions when using the JAR. -->
 									<artifact>*:*</artifact>
 									<excludes>
 										<exclude>META-INF/*.SF</exclude>
@@ -156,11 +153,6 @@ under the License.
 									</excludes>
 								</filter>
 							</filters>
-							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.kschool.tfm.engine.flink.PowerConsumption</mainClass>
-								</transformer>
-							</transformers>
 						</configuration>
 					</execution>
 				</executions>
